--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,29 @@ workflows:
     docker:
       - image: cimg/base:stable
         auth:
+          version: 2.1
+executors:
+  my-custom-executor:
+    docker:
+      - image: cimg/base:stable
+        auth:
           # ensure you have first added these secrets
+          # visit app.circleci.com/settings/project/github/tayminni80/hello-world/environment-variables
+          username: $DOCKER_HUB_USER
+          password: $DOCKER_HUB_PASSWORD
+jobs:
+  my-job-name:
+
+    executor: my-custom-executor
+    steps:
+      - checkout
+      - run: |
+          # echo Hello, World!
+
+workflows:
+  my-custom-workflow:
+    jobs:
+      - my-job-name# ensure you have first added these secrets
           # visit app.circleci.com/settings/project/github/tayminni80/hello-world/environment-variables
           username: $DOCKER_HUB_USER
           password: $DOCKER_HUB_PASSWORD
